Dotted artifacts appear on many websites on Intel HD 520 with webrender.compositor
Categories
(Core :: Graphics, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox73 | --- | fixed |
People
(Reporter: dekeltal, Assigned: sotaro)
References
Details
Attachments
(5 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:73.0) Gecko/20100101 Firefox/73.0
Steps to reproduce:
Hovering over many sites (including Bugzilla, youtube and more) cause dotted artifacts to temporarily appear on screen - see attached
Update - I checked:
- Ran Firefox with all addons disabled - did not solve
- Refreshed firefox installation - did not solve
- Checked with regular FF version (not nightly) - issue does not occur
Updated•5 years ago
|
| Assignee | ||
Comment 4•5 years ago
|
||
It looks similar to Bug 1602511.
Dekel Tal, can you upload about:support information?
| Assignee | ||
Comment 6•5 years ago
|
||
Thank you! From Attachment 9115717 [details], the problem also happened HD520 and we need to extend blacklisted driver version.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 7•5 years ago
|
||
Updated•5 years ago
|
Comment 9•5 years ago
|
||
| bugherder | ||
Comment 10•5 years ago
|
||
Dekel, would you be able to check if the issue is visible on this build? Here is the exact artifact link for Windows. Thank you!
| Reporter | ||
Comment 11•5 years ago
|
||
Been using the build today, and so far the issue did not reproduce. Will keep using it for the following days and will update if anything pops.
Comment 12•5 years ago
|
||
Thank you Dekel!
The original fix (that added the targets to blocklist) was reverted in https://phabricator.services.mozilla.com/D78705, which works around the issue but still allows Direct Composition to be enabled.
Description
•