Bug 1603515 - Extend Blacklist of webrender compositor on Intel HD 520 r=gw

Differential Revision: https://phabricator.services.mozilla.com/D57100

--HG--
extra : moz-landing-system : lando